...
                                                        <constraints>
                                                            <constraint firstAttribute="width" constant="41" id="Wzw-XO-vtt"/>
                                                            <constraint firstAttribute="height" constant="41" id="cXe-tU-eVp"/>
                                                            <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="41" id="meI-nB-Wcg"/>
                                                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="41" id="ms0-pf-B2A"/>
                                                        </constraints>
                                                        <state key="normal" title="Button" image="unchecked-checkbox"/>
                                                        <connections>
                                                            <action selector="foodButton:" destination="8rJ-Kc-sve" eventType="touchUpInside" id="jsp-nY-P5v"/>
                                                        </connections>
                                                    </button>
                                                </subviews>
                                                <constraints>
...
                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                <nil key="highlightedColor"/>
                                            </label>
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nMS-ez-Xs2">
                                                <rect key="frame" x="143" y="443" width="49" height="115"/>
                                                <state key="normal" title="Submit"/>
                                                <connections>
                                                    <action selector="submitButton:" destination="8rJ-Kc-sve" eventType="touchUpInside" id="DX9-RC-xfl"/>
                                                </connections>
                                            </button>
                                        </subviews>
                                        <constraints>
...
                            <constraint firstItem="EMr-Oi-gYx" firstAttribute="top" secondItem="O1u-W8-tvY" secondAttribute="top" id="hpU-RK-M1l"/>
                            <constraint firstItem="O1u-W8-tvY" firstAttribute="trailing" secondItem="EMr-Oi-gYx" secondAttribute="trailing" id="m5O-eR-R7e"/>
                            <constraint firstItem="O1u-W8-tvY" firstAttribute="bottom" secondItem="foy-NN-UKF" secondAttribute="bottom" id="oqI-Eq-xPD"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="O1u-W8-tvY"/>
                    </view>
                    <tabBarItem key="tabBarItem" title="Second" image="second" id="cPa-gy-q4n"/>
                    <connections>
                        <outlet property="candyBox" destination="u9h-OP-tpm" id="UUp-WY-cvn"/>
                        <outlet property="cigiBox" destination="oOe-UB-wpL" id="zYX-Qn-uBe"/>
                        <outlet property="foodBox" destination="arq-Hd-Xm0" id="DiU-ik-YGy"/>
                        <outlet property="kcalInput" destination="cYQ-C7-bYR" id="ZEa-ct-pOP"/>
                        <outlet property="messageLable" destination="vVw-5N-ZHo" id="LNN-Wg-yGu"/>
...
